[metadata]
name = dimorphite_dl
version = 1.2.4
description = "An open-source program for enumerating the ionization states of drug-like small molecules"
long_description = file: README.md
url = "durrantlab.pitt.edu/dimorphite-dl/"
author = ""
author_email = ""
maintainer = ""
maintainer_email = ""
license = ""
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords =
    Ionization
    pH
    Protonation
    Modeling
    Virtual screening
    Drug discovery


[options]
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    tqdm
    click>=8.0.0


[options.packages.find]
where = src


[options.package_data]
* = *.json, *.smarts


[options.entry_points]
console_scripts =
    dimorphite = dimorphite_dl.cli:main
